--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: var(--white);
+  color: var(--pink);
 }
 
 
